# star-term

./: .gitignore  star-term-cpp-build-notes
license_manager/: README.md  requirements.txt
license_manager/installer/: make_icon.py  run_license_manager.bat  setup.nsi
license_manager/license_manager/: config.py  crypto.py  icons.py  main.py
windows/: README.md  requirements.txt
windows-cpp/: CMakeLists.txt  README.md  resources.qrc  star-term-windows-cpp-build-notes.md  vcpkg.json
windows-cpp/installer/: run_star_term.bat  run_star_term_cpp.bat  setup.nsi
windows-cpp/src/: colors.h  config.cpp  config.h  connectiondialog.cpp  connectiondialog.h  debug.cpp  debug.h  icons.cpp  icons.h  licensedialog.cpp  licensedialog.h  licensing.cpp  licensing.h  macrospanel.cpp  macrospanel.h  main.cpp  mainwindow.cpp  mainwindow.h  preferencesdialog.cpp  preferencesdialog.h  rdppane.cpp  rdppane.h  remotebrowser.cpp  remotebrowser.h  sessionpane.cpp  sessionpane.h  sidebar.cpp  sidebar.h  sshsession.cpp  sshsession.h  statsworker.cpp  statsworker.h  statusbar.cpp  statusbar.h  terminalwidget.cpp  terminalwidget.h  theme.cpp  theme.h  updatechecker.cpp  updatechecker.h  (+2 more)
windows/installer/: make_icon.py  make_splash.py  run_star_term.bat  setup.nsi
windows/licensing_tool/: README.md  generate_keypair.py  generate_license.py  private_key.pem
windows/star_term/: colors.py  config.py  connection_dialog.py  debug.py  icons.py  license_dialog.py  licensing.py  macros_panel.py  main.py  preferences_dialog.py  remote_browser.py  session_pane.py  sidebar.py  ssh_session.py  status_bar.py  terminal_widget.py  theme.py
work/: STAR_TERM.md
